[package]
name = "tnn-encryptedproperties"
version = "0.1.0"
edition = "2021"
author = ["Michael Herland Valen"]

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = "0.10.57"
base64 = "0.21.4"
thiserror = "1.0.49"
anyhow = "1.0.75"
tnn = "0.1.2"
clap = { version = "4.4.6", features = ["derive"] }
