[package]
name = "tnn"
version = "0.2.0"
edition = "2021"
authors = ["Michael Herland Valen"]
description = "A CLI tool for encrypting and decrypting strings using AES-256-CBC"
license = "MIT"

[lib]
name = "tnn"
path = "src/lib.rs"

[[bin]]
name = "tnn"
path = "src/main.rs"

[dependencies]
openssl = "0.10.70"
base64 = "0.22.1"
thiserror = "2.0.9"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
